--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.89.0"
   },
   "devDependencies": {
