--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.57.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
-    "sass": "^1.89.0"
+    "sass": "^1.89.0",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
