--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@twilio/voice-sdk": "^2.13.0",
     "js-cookie": "^3.0.5",
     "next": "15.3.2",
     "react": "^19.0.0",
