--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,17 @@
     //   "@/*": ["./src/*"]
     // }
     "paths": {
-  "@/*": ["./*"]
-}
-
+      "@/*": ["./*"]
+    }
   },
   // "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "include": ["next-env.d.ts", "app", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
+  "include": [
+    "next-env.d.ts",
+    "src",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
 
   "exclude": ["node_modules"]
 }
